--- a/angular.json
+++ b/angular.json
@@ -33,8 +33,7 @@
               "src/styles.scss",
               "src/assets/css/styles.css",
               "src/assets/scss/main.scss",
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
-              "@angular/material/prebuilt-themes/indigo-pink.css"
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
             ],
             "scripts": [
             ]
@@ -104,8 +103,10 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/css/styles.css",
+              "src/assets/scss/main.scss",
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
             ],
             "scripts": []
           }
