fix:(mat snackbar background)

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "src/styles.scss",
               "src/assets/css/styles.css",
               "src/assets/scss/main.scss",
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": [
             ]
@@ -106,7 +107,8 @@
               "src/styles.scss",
               "src/assets/css/styles.css",
               "src/assets/scss/main.scss",
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           }
